name:                hlg-website
version:             0.1.0.0
homepage:            https://hlg.io
maintainer:          jasonkuhrt@me.com
category:            App
build-type:          Simple
cabal-version:       >=1.10

executable hlg-website
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       scotty,
                       bytestring,
                       lens,
                       aeson,
                       lens-aeson,
                       text,
                       wreq
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jasonkuhrt/join-slack-team
